# rust-script-template

./: Cargo.toml  README.md
src/: lib.rs  main.rs
