[package]
name = "genera_paquete_lc_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.78"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
clap = { version = "4.4.17", features = ["derive", "env"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = "0.7.10"
lockfile = "0.4.0"
chrono = "0.4.30"
bigdecimal = "0.4.1"
regex = "1.10.1"
reqwest = { version = "0.11.23", features = ['multipart', 'stream'] }
openssl = { version = "0.10.62", features = ["vendored"] }

# Serialize and Deserialize, claaaasic stuff
serde = { version = "1.0.194", features = ["derive"] }

# SQLx, you already know what this crate does
[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "chrono", "bigdecimal", "json"]

# Target for cross compile on macOS
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"